# synagraph

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.synagraph.yml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  styles.css
docs/: development.md  grpc_cli.md  observability.md  storage_plan.md  testing.md  vision.md
migrations/: 001_init_synagraph.sql  002_force_rls.sql
proto/: synagraph.proto
src/: config.rs  lib.rs  main.rs  pb.rs  scedge.rs  state.rs  telemetry.rs
src/domain/: capsule.rs  mod.rs  node.rs
src/repository/: in_memory.rs  mod.rs  postgres.rs
src/server/: grpc.rs  http.rs  mod.rs
tests/: grpc_upsert.rs  postgres_nodes.rs
